--- a/packages/payments/package.json
+++ b/packages/payments/package.json
@@ -25,9 +25,10 @@
     "migrate:prod": "prisma migrate deploy && prisma db seed"
   },
   "dependencies": {
-    "@camp/auth-client": "^3.1.3",
+    "@a2seven/yoo-checkout": "^1.1.4",
     "@nestjs/common": "^10.4.9",
     "@nestjs/core": "^10.4.9",
+    "@nestjs/cqrs": "^10.2.8",
     "@nestjs/platform-express": "^10.4.9",
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^5.22.0",
