--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,6 @@
-version: '3.8'
+version: "3.8"
 
 services:
-
   postgres:
     container_name: db
     image: postgres:14.1-alpine
@@ -105,10 +104,24 @@ services:
     depends_on:
       - elasticsearch
 
+  web:
+    container_name: nextjs-web-app
+    build:
+      context: ./web
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=production
+    depends_on:
+      - postgres
+      - mongodb
+    networks:
+      - custom
+
 volumes:
   mongodb_data:
     driver: local
-
 
 networks:
   custom:
