--- a/onchain/sui/analytics/Dockerfile
+++ b/onchain/sui/analytics/Dockerfile
@@ -1,17 +1,20 @@
 FROM golang:1.23.6 AS builder
 LABEL authors="mixalight"
+
 WORKDIR /app
 
 COPY go.mod go.sum ./
 
-RUN go mod download
+RUN go mod tidy
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o main ./cmd/app/main.go
+RUN go build -o main ./cmd/app/main.go
 
 FROM alpine:latest
+
 WORKDIR /root/
+
 COPY --from=builder /app/main .
-EXPOSE 8080
+
 CMD ["./main"]
