--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,17 @@
 version: "3.8"
 
 services:
+  # web:
+  #   container_name: web
+  #   build:
+  #     context: ./web
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 4173:4173
+  #   restart: always
+  #   environment:
+  #     - VITE_FINKEPEER_URL=${FINKEPEER_URL}
+
   onchain_sui:
     container_name: onchain_sui
     build: onchain/sui/analytics/.
