--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,43 +1,19 @@
-# Используем официальный образ Node.js в качестве базового образа
-# В данном случае выбрана версия 18 с минимальным окружением
-FROM node:18-alpine AS builder
+FROM node:22
 
-# Устанавливаем рабочую директорию внутри контейнера
+# Устанавливаем рабочую директорию
 WORKDIR /app
 
-# Копируем package.json и yarn.lock для установки зависимостей
-COPY package.json yarn.lock ./
+# Копируем package.json и package-lock.json
+COPY package*.json ./
 
 # Устанавливаем зависимости
-RUN yarn install --frozen-lockfile
+RUN npm install --frozen-lockfile
 
-# Копируем весь код приложения
-COPY . ./
+# Копируем исходный код проекта
+COPY . .
 
-# Собираем приложение Next.js
-RUN yarn build
+# Строим проект
+RUN npm run build
 
-# Убираем devDependencies для уменьшения размера конечного образа
-RUN yarn install --production --frozen-lockfile
-
-# Используем минимальный Node.js образ для запуска
-FROM node:18-alpine AS runner
-
-# Устанавливаем рабочую директорию внутри контейнера
-WORKDIR /app
-
-# Копируем собранное приложение и production-зависимости из builder
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./
-
-# Устанавливаем переменные окружения для Next.js
-ENV NODE_ENV=production
-ENV PORT=3000
-
-# Открываем порт для приложения
-EXPOSE 3000
-
-# Запускаем приложение
-CMD ["yarn", "start"]
+# Запускаем сервер
+CMD ["npm", "run", "preview"]
