--- a/web/package.json
+++ b/web/package.json
@@ -1,67 +1,69 @@
 {
-  "name": "mantine-next-template",
-  "version": "1.0.0",
+  "name": "mantine-vite-template",
   "private": true,
+  "type": "module",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "analyze": "ANALYZE=true next build",
-    "start": "next start",
-    "export": "next build && next export",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "lint": "npm run eslint && npm run stylelint",
-    "eslint": "next lint",
+    "eslint": "eslint . --cache",
     "stylelint": "stylelint '**/*.css' --cache",
-    "jest": "jest",
-    "jest:watch": "jest --watch",
-    "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
+    "prettier": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
-    "test": "npm run prettier:check && npm run lint && npm run typecheck && npm run jest",
+    "vitest": "vitest run",
+    "vitest:watch": "vitest",
+    "test": "npm run typecheck && npm run prettier && npm run lint && npm run vitest && npm run build",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.15.1",
-    "@mantine/hooks": "7.15.1",
+    "@mantine/core": "7.16.3",
+    "@mantine/hooks": "7.16.3",
     "@mantinex/mantine-logo": "^1.1.0",
-    "@next/bundle-analyzer": "^14.2.4",
-    "@tabler/icons-react": "^3.6.0",
-    "next": "15.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@mysten/sui": "^1.21.2",
+    "@suiet/wallet-kit": "^0.3.4",
+    "@tabler/icons-react": "^3.30.0",
+    "@tanstack/react-query": "^5.66.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@eslint/js": "^9.15.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-    "@storybook/nextjs": "^8.1.10",
-    "@storybook/react": "^8.1.10",
-    "@testing-library/dom": "^10.1.0",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/eslint-plugin-jsx-a11y": "^6",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.8",
-    "@types/react": "18.3.3",
-    "babel-loader": "^9.1.3",
-    "eslint": "^9.15.0",
+    "@eslint/js": "^9.18.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@storybook/react": "^8.5.0",
+    "@storybook/react-vite": "^8.5.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.0",
+    "@types/node": "^22.10.7",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.18.0",
     "eslint-config-mantine": "^4.0.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.38",
+    "eslint-plugin-react": "^7.37.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jsdom": "^26.0.0",
+    "postcss": "^8.5.1",
     "postcss-preset-mantine": "1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.3.2",
-    "storybook": "^8.1.10",
+    "prettier": "^3.4.2",
+    "prop-types": "^15.8.1",
+    "storybook": "^8.5.0",
     "storybook-dark-mode": "^4.0.2",
-    "stylelint": "^16.6.1",
-    "stylelint-config-standard-scss": "^13.1.0",
-    "ts-jest": "^29.1.5",
-    "typescript": "5.5.2",
-    "typescript-eslint": "^8.14.0"
+    "stylelint": "^16.13.2",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
+    "vite": "^6.0.7",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.2"
   },
-  "packageManager": "yarn@4.5.3"
+  "packageManager": "yarn@4.6.0"
 }
