base struct add

--- a/.env-example
+++ b/.env-example
@@ -1,21 +1,28 @@
+# Telegram
 APP_ID=
 API_HASH=
 
+# OpenAI LLM
+OPENAI_API_KEY=your-api-key-here
+
+# MongoDB
 MONGO_URI=mongodb://root:rootpassword@mongodb:27017/
-MONGO_DB_NAME=test_db
+MONGO_DB_NAME=defi_wizzard
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=rootpassword
-
 MONGO_EXPRESS_USERNAME=admin
 MONGO_EXPRESS_PASSWORD=adminpassword
 
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=0.0.0.0
-POSTGRES_PORT=5432
-POSTGRES_DB=postgres
+# PostgreSQL LLM
+LLM_POSTGRES_USER=llm_user
+LLM_POSTGRES_PASSWORD=llm_password
+LLM_POSTGRES_DB=llm_db
 
-PGADMIN_DEFAULT_EMAIL=root@root.com
-PGADMIN_DEFAULT_PASSWORD=root
+# PostgreSQL Frontend
+FRONTEND_POSTGRES_USER=frontend_user
+FRONTEND_POSTGRES_PASSWORD=frontend_password
+FRONTEND_POSTGRES_DB=frontend_db
 
-FINKEPEER_URL=http://localhost:8080
+# PGAdmin
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=admin_password
