--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,10 @@
     "marked": "^15.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
